Desenvolvendo estrutura de paginas

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -3,16 +3,16 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Hello Ionic</ion-title>
+    <ion-title>Início</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
 
-  <h3>Welcome to your first Ionic app!</h3>
+  <h3>Avaliação de Acessibilidade em Objetos de Aprendizagem</h3>
 
-  <p>
+<!--  <p>
     This starter project is our way of helping you get a functional app running in record time.
   </p>
   <p>
@@ -20,6 +20,6 @@
   </p>
   <p>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
+  </p>-->
 
 </ion-content>
