add biblioteca e view para selecionar arquivo

--- a/src/pages/file-chooser/file-chooser.html
+++ b/src/pages/file-chooser/file-chooser.html
@@ -14,5 +14,6 @@
 </ion-header>
 
 <ion-content padding>
-
+  <p>Instruções...</p>
+  <button ion-button (click)="openFileChooser()" >Selecionar Arquivo</button>
 </ion-content>
