--- a/src/pages/validate-file-extension/validate-file-extension.html
+++ b/src/pages/validate-file-extension/validate-file-extension.html
@@ -15,5 +15,8 @@
 
 <ion-content padding>
   <p *ngIf="hasErro">Erro: {{hasErro}}</p>
-  <p *ngIf="hasFile">Nome do Arquivo: {{hasFile}}</p>
+  <p *ngIf="hasFile">Nome do Arquivo: {{hasFile.name}}</p>
+  <p *ngIf="hasFile">URI: {{hasFile.uri}}</p>
+<!--  <p *ngIf="hasFile">DataURI: {{hasFile.dataURI}}</p>-->
+  <p *ngIf="hasFile">MediaType: {{hasFile.mediaType}}</p>
 </ion-content>
