--- a/src/pages/validate-file-extension/validate-file-extension.html
+++ b/src/pages/validate-file-extension/validate-file-extension.html
@@ -9,14 +9,14 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Validação da Extensão do Arquivo</ion-title>
+    <ion-title>Avaliação OA</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <p *ngIf="hasErro">Erro: {{hasErro}}</p>
-  <p *ngIf="hasFile">Nome do Arquivo: {{hasFile.name}}</p>
-  <p *ngIf="hasFile">URI: {{hasFile.uri}}</p>
+<!--  <p *ngIf="hasErro">Erro: {{hasErro}}</p>-->
+<!--  <p *ngIf="hasFile">Nome do Arquivo: {{hasFile.name}}</p>-->
+<!--  <p *ngIf="hasFile">URI: {{hasFile.uri}}</p>-->
 <!--  <p *ngIf="hasFile">DataURI: {{hasFile.dataURI}}</p>-->
-  <p *ngIf="hasFile">MediaType: {{hasFile.mediaType}}</p>
+<!--  <p *ngIf="hasFile">MediaType: {{hasFile.mediaType}}</p>-->
 </ion-content>
