--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -14,5 +14,21 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        <p>Grupos de Pesquisa envolvidos neste projeto:</p>
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+    1) UFSM - Universidade Federal de Santa Maria
 
+    Desenvolvimento e Inovação em Reabilitação e Tecnologia Assistiva
+    IATE - Inteligência Artificial e Tecnologia Educacional
+
+    2) UFSC - Universidade Federal de Santa Catarina
+
+    Núcleo de Acessibilidade Digital e Tecnologias Assistivas
+    </ion-card-content>
+  </ion-card>
 </ion-content>
