--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -14,7 +14,7 @@
 </ion-header>
 
 <ion-content padding>
-  <p class="font-title-h3 p-16">Grupos de Pesquisa envolvidos neste projeto:</p>
+  <ion-title  class="bg-theme-2 m-10"><div class="line-break-down">Grupos de Pesquisa envolvidos neste projeto:</div></ion-title>
   <ion-card class="border-radius">
     <ion-card-header>
       <div class="flex justify-center  b-dotted">
