--- a/src/pages/validate-file-extension/validate-file-extension.html
+++ b/src/pages/validate-file-extension/validate-file-extension.html
@@ -19,7 +19,7 @@
 <!--  <p *ngIf="hasFile">URI: {{hasFile.uri}}</p>-->
 <!--  <p *ngIf="hasFile">DataURI: {{hasFile.dataURI}}</p>-->
 <!--  <p *ngIf="hasFile">MediaType: {{hasFile.mediaType}}</p>-->
-  <ion-title  class="bg-theme-2"><div class="line-break-down">Resumo da Avaliação:</div></ion-title>
+  <ion-title  class="bg-theme-2"><div class="line-break-down ptb-5">Resumo da Avaliação:</div></ion-title>
   <ion-card>
     <ion-list>
       <ion-item>
@@ -33,27 +33,29 @@
       </ion-item>
     </ion-list>
   </ion-card>
-  <ion-title  class="bg-theme-2"><div class="line-break-down">Diretrizes Não Contempladas:</div></ion-title>
+  <ion-title  class="bg-theme-2 ptb-5" *ngIf="diretrizesPorDeficienciaComErro != null && diretrizesPorDeficienciaComErro.length > 0"><div class="line-break-down">Diretrizes Não Contempladas:</div></ion-title>
   <ion-card *ngFor="let deficienciaAtual of diretrizesPorDeficienciaComErro">
     <ion-list>
-      <ion-list-header>
-        <div class="ion-list-header line-break-down b-dotted-np">{{deficienciaAtual.descricaoDeficiencia}}</div>
+      <ion-list-header class="title-card">
+        <div class="line-break-down b-dotted-np">{{deficienciaAtual.descricaoDeficiencia}}</div>
       </ion-list-header>
       <ion-item *ngFor="let diretrizAtual of deficienciaAtual.diretrizes" class="line-break-down">
         <div class="line-break-down">{{diretrizAtual.getDescricaoDiretriz()}}</div>
-        <div class="line-break-down">{{diretrizAtual.getRecomendacao()}}</div>
+<!--        <div class="line-break-down">{{diretrizAtual.getRecomendacao()}}</div>-->
+        <hr>
       </ion-item>
     </ion-list>
   </ion-card>
-  <ion-title  class="bg-theme-2"><div class="line-break-down">Diretrizes Contempladas:</div></ion-title>
+  <ion-title  class="bg-theme-2 ptb-5" *ngIf="diretrizesPorDeficienciaSemErro != null && diretrizesPorDeficienciaSemErro.length > 0"><div class="line-break-down" >Diretrizes Contempladas:</div></ion-title>
   <ion-card *ngFor="let deficienciaAtual2 of diretrizesPorDeficienciaSemErro">
     <ion-list>
-      <ion-list-header>
-        <div class="ion-list-header line-break-down b-dotted-np">{{deficienciaAtual2.descricaoDeficiencia}}</div>
+      <ion-list-header class="title-card">
+        <div class="line-break-down b-dotted-np">{{deficienciaAtual2.descricaoDeficiencia}}</div>
       </ion-list-header>
       <ion-item *ngFor="let diretrizAtual2 of deficienciaAtual2.diretrizes" class="line-break-down">
         <div class="line-break-down">{{diretrizAtual2.getDescricaoDiretriz()}}</div>
-        <div class="line-break-down">{{diretrizAtual2.getRecomendacao()}}</div>
+<!--        <div class="line-break-down">{{diretrizAtual2.getRecomendacao()}}</div>-->
+        <hr>
       </ion-item>
     </ion-list>
   </ion-card>
