--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -8,18 +8,46 @@
 </ion-header>
 
 
-<ion-content padding>
-
-  <h3>Avaliação de Acessibilidade em Objetos de Aprendizagem</h3>
-
-<!--  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-  <p>
-    Follow along on the tutorial section of the Ionic docs!
-  </p>
-  <p>
-    <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>-->
-
+<ion-content padding class="">
+  <ion-card class="mb-20 bl-white line-h-28">
+  <ion-title class="bg-theme-3"><div class="line-break-down ptb-5">Aplicativo de Avaliação da Acessibilidade em Objetos de Aprendizagem (AAOA-App)</div></ion-title>
+  </ion-card>
+  <ion-card class="bl-3 mb-15">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down">Este aplicativo propõe avaliar a acessibilidade de Objetos de Aprendizagem (OAs),
+          aplicando técnicas de Inteligência Artificial,
+          mais especificamente um Sistema Especialista (SE). </p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <ion-card class="bl-3 mb-15">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down"> Desenvolveu-se este protótipo de aplicativo que avalia a acessibilidade de OAs no formato de texto,
+          inicialmente nos formatos DOCX e ePub, com base em diretrizes e recomendações que são armazenadas na base de conhecimento do SE.</p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <ion-card class="bl-3 mb-15">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down">Visto que trata-se de um protótipo, não está isento de apresentar erros durante a utilização.</p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <ion-card class="bl-3">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down">Informe qualquer problema obtido durante a utilização.</p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <ion-card class="bl-3">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down">Caso não seja exibida corretamente a seção Diretrizes, siga as instruções contidas na Seção Sobre, para recuperação do BD (Banco de Dados).</p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
