--- a/src/pages/lo-evaluation/lo-evaluation.html
+++ b/src/pages/lo-evaluation/lo-evaluation.html
@@ -14,6 +14,24 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Instruções...</p>
-  <button ion-button (click)="pushPageFileChooser()" >Próximo</button>
+  <ion-card class="mb-20 bl-white line-h-28">
+    <ion-title class="bg-theme-3"><div class="line-break-down ptb-5">Instruções:</div></ion-title>
+  </ion-card>
+  <ion-card class="bl-3 mb-15">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down">Para realizar a Analise do OA necessita-se do arquivo a ser avaliado devidamente salvo neste dispositivo. </p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <ion-card class="bl-3 mb-15">
+    <ion-list>
+      <ion-item class="pt-10 ptb-10">
+        <p class="line-break-down">Ao selecionar a opção Próximo será solicitada a seleção do arquivo em seu dispositivo.</p>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <div class="mrl-8">
+    <button ion-button (click)="pushPageFileChooser()" full>Próximo</button>
+  </div>
 </ion-content>
