--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -15,7 +15,7 @@
   <ion-card class="bl-3 mb-15">
     <ion-list>
       <ion-item class="pt-10 ptb-10">
-        <p class="line-break-down">Este aplicativo propõe avaliar a acessibilidade de Objetos de Aprendizagem (OAs),
+        <p class="line-break-down">Este aplicativo propõe-se avaliar a acessibilidade de Objetos de Aprendizagem (OAs),
           aplicando técnicas de Inteligência Artificial,
           mais especificamente um Sistema Especialista (SE). </p>
       </ion-item>
@@ -39,7 +39,7 @@
   <ion-card class="bl-3">
     <ion-list>
       <ion-item class="pt-10 ptb-10">
-        <p class="line-break-down">Informe qualquer problema obtido durante a utilização.</p>
+        <p class="line-break-down">Informe qualquer problema obtido durante a sua utilização através do e-mail: <a href="mailto:patryckguerra@yahoo.com.br">patryckguerra@yahoo.com.br</a>.</p>
       </ion-item>
     </ion-list>
   </ion-card>
