--- a/src/pages/lo-evaluation/lo-evaluation.html
+++ b/src/pages/lo-evaluation/lo-evaluation.html
@@ -9,7 +9,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Avalizar OA</ion-title>
+    <ion-title>Avaliar OA</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -27,7 +27,7 @@
   <ion-card class="bl-3 mb-15">
     <ion-list>
       <ion-item class="pt-10 ptb-10">
-        <p class="line-break-down">Ao selecionar a opção Próximo será solicitada a seleção do arquivo em seu dispositivo.</p>
+        <p class="line-break-down">Ao selecionar o Botão Próximo será solicitada a seleção do arquivo em seu dispositivo.</p>
       </ion-item>
     </ion-list>
   </ion-card>
