--- a/src/pages/validate-file-extension/validate-file-extension.html
+++ b/src/pages/validate-file-extension/validate-file-extension.html
@@ -35,14 +35,14 @@
   <ion-card *ngIf="(cRegrasAvaliadas+cRegrasNaoAvaliadas) > 0" class="bl-3 mb-15">
     <ion-list>
       <ion-item class="pt-10 ptb-10">
-        <p class="line-break-down">O OA passou em {{cRegrasSemErro}} regras.</p>
+        <p class="line-break-down">O OA passou em {{cRegrasSemErro}} regra(s).</p>
       </ion-item>
     </ion-list>
   </ion-card>
   <ion-card *ngIf="(cRegrasAvaliadas+cRegrasNaoAvaliadas) > 0" class="bl-3 mb-15">
     <ion-list>
       <ion-item class="pt-10 ptb-10 mb-15">
-        <p class="line-break-down">O OA não passou em {{cRegrasComErro}} regras.</p>
+        <p class="line-break-down">O OA não passou em {{cRegrasComErro}} regra(s).</p>
       </ion-item>
     </ion-list>
   </ion-card>
