--- a/src/pages/file-chooser/file-chooser.html
+++ b/src/pages/file-chooser/file-chooser.html
@@ -20,7 +20,7 @@
   <ion-card class="bl-3 mb-15">
     <ion-list>
       <ion-item class="pt-10 ptb-10">
-        <p class="line-break-down">Ao selecionar a opção Selecionar Arquivo, escolha um arquivo no formato docx ou epub. Será exibido o nome do arquivo se este possui um dos formatos válidos.</p>
+        <p class="line-break-down">Ao selecionar o Botão Arquivo, escolha um arquivo no formato docx ou epub. Será exibido o nome do arquivo se este possui um dos formatos válidos.</p>
       </ion-item>
     </ion-list>
   </ion-card>
