--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -39,7 +39,7 @@
   <ion-card class="bl-3">
     <ion-list>
       <ion-item class="pt-10 ptb-10">
-        <p class="line-break-down">Informe qualquer problema obtido durante a sua utilização através do e-mail: <a href="mailto:patryckguerra@yahoo.com.br">patryckguerra@yahoo.com.br</a>.</p>
+        <p class="line-break-down">Informe qualquer problema obtido durante a sua utilização através do e-mail: <a href="mailto:patrickguerra.developer@gmail.com">patrickguerra.developer@gmail.com</a>.</p>
       </ion-item>
     </ion-list>
   </ion-card>
