--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -54,7 +54,7 @@
     </ion-card-header>
     <ion-card-content>
       <p><b>Curso:</b> Bacharelado em Sistemas de Informação - UFSM/FW</p>
-      <p><b>Email:</b> <a href="mailto:patryckguerra@yahoo.com.br">patryckguerra@yahoo.com.br</a></p>
+      <p><b>Email:</b> <a href="mailto:patrickguerra.developer@gmail.com">patrickguerra.developer@gmail.com</a></p>
       <p><b>GitHub:</b> <a href="https://github.com/guerrasao">https://github.com/guerrasao</a></p>
     </ion-card-content>
   </ion-card>
@@ -73,8 +73,8 @@
       </ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p><b>Versão:</b> 1.3.0</p>
-      <p><b>Data de publicação:</b> 11/12/2019</p>
+      <p><b>Versão:</b> 1.3.1</p>
+      <p><b>Data de publicação:</b> 11/01/2020</p>
     </ion-card-content>
   </ion-card>
 
